[package]
authors = ["Thierry Arnoux <dwheeler@dwheeler.com>"]
license = "MIT"
name = "metamath-web"
readme = "README.md"
version = "0.0.1"
description = "A web server for Metamath pages"
repository = "https://github.com/tirix/metamath-web"
edition = "2018"

[dependencies]
metamath-knife = { git = "https://github.com/metamath/metamath-knife", tag = "v0.3.6" }
handlebars = "4.1.5"
warp = "0.3.6"
log = "0.4.14"
tokio = { version = "1.14", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "3.0.5", features = ["cargo"] }
regex = "1.5.4"

# Optional dependencies
nom = { version = "7.1.0", optional = true }

[features]
sts = ["nom"]

